# Github-Action-Test

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  rwat22  vcpkg-configuration.json  vcpkg.json
.github/workflows/: BranchBuild-Ubuntu-20.04  BranchBuild-Ubuntu-20.04.yml  BranchBuild-Ubuntu-24.04(old).yml  Build-Ubuntu.yml  CallMe(old).yml  Caller(old).yml  ClearCache.yml  Docker-BuildAndPush(old).yml  Docker-BuildAndPush.yml  Docker-ContainerAction.yml  Docker-RunJobInContainer.yml  Docker-UseActions.yml  Docker-UseImage(old).yml  Docker-UseImage.yml  PR-ClearCache.yml  PR-Test(old).yml  PR-Test.yml  RunCmd.yml  Test-ActionCache.yml  Test-Annotation.yml  Test-JobSummary.yml  UseDocker.yml  UseDockerActions.yml  build-cache.yml  build.yml  main.yml  update-branch-cache(old).yml  update-branch-cache.yml  update-main-cache.yml  upload-file.yml  vcpkg-build-cache.yml
.github/workflows/actions/alpine-docker/: action.yml  entrypoint.sh
.github/workflows/actions/clear-cache/: action.yml
.github/workflows/actions/rocky-docker/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/problemMatcher/: msvc-clang-cl.json  msvc-classic.json  msvc-column.json
App/: CMakeLists.txt  main.cpp
docker/: rocky.dockerfile  ubuntu.dockerfile
tests/: CMakeLists.txt  Test1.cpp  Test2.cpp  Test3.cpp
